# discord-modbot

./: .gitignore  Cargo.toml  README.md
.github/: main.yml  shuttle-deploy.yml
.github/workflows/: shuttle-deploy.yml
src/: main.rs  utils.rs
src/controller/: commands.rs  event_handler.rs  mod.rs
src/controller/commands/: log_channel.rs  mod.rs  toggle_bans.rs  toggle_listener.rs
src/controller/errors/: mod.rs
